# editable_bug_poetry_

check_packages/: pyproject.toml  run_check.py
editable/: editable_module.py  pyproject.toml
non_editable/: non_editable_module.py  pyproject.toml
